# i2cat_XR_MCU

./: CMakeLists.txt  README.md  SetupConfig.cmake  genPrj.pl
config/: Log4cxxConfig.xml  MCU.ini
libs/win64/b2d/include/: bin2dash.hpp
libs/win64/b2d/lib/: bin2dash.lib
libs/win64/boost/boost-assert/: CONTROL
libs/win64/boost/boost-assert/share/boost-assert/: vcpkg_abi_info.txt
libs/win64/boost/boost-config/: CONTROL
libs/win64/boost/boost-config/share/boost-config/: vcpkg_abi_info.txt
libs/win64/boost/boost-core/: CONTROL
libs/win64/boost/boost-core/share/boost-core/: vcpkg_abi_info.txt
libs/win64/boost/boost-exception/: CONTROL
libs/win64/boost/boost-exception/debug/lib/: boost_exception-vc140-mt-gd.lib
libs/win64/boost/boost-exception/lib/: boost_exception-vc140-mt.lib
libs/win64/boost/boost-exception/share/boost-exception/: vcpkg_abi_info.txt
libs/win64/boost/boost-filesystem/: CONTROL
libs/win64/boost/boost-filesystem/debug/lib/: boost_filesystem-vc140-mt-gd.lib
libs/win64/boost/boost-filesystem/lib/: boost_filesystem-vc140-mt.lib
libs/win64/boost/boost-filesystem/share/boost-filesystem/: vcpkg_abi_info.txt
libs/win64/boost/boost-iostreams/: CONTROL
libs/win64/boost/boost-iostreams/debug/lib/: boost_iostreams-vc140-mt-gd.lib
libs/win64/boost/boost-iostreams/lib/: boost_iostreams-vc140-mt.lib
libs/win64/boost/boost-iostreams/share/boost-iostreams/: vcpkg_abi_info.txt
libs/win64/boost/boost-mpl/: CONTROL
libs/win64/boost/boost-mpl/share/boost-mpl/: vcpkg_abi_info.txt
libs/win64/boost/boost-preprocessor/: CONTROL
libs/win64/boost/boost-preprocessor/share/boost-preprocessor/: vcpkg_abi_info.txt
libs/win64/boost/boost-smart-ptr/: CONTROL
libs/win64/boost/boost-smart-ptr/share/boost-smart-ptr/: vcpkg_abi_info.txt
libs/win64/boost/boost-static-assert/: CONTROL
libs/win64/boost/boost-static-assert/share/boost-static-assert/: vcpkg_abi_info.txt
libs/win64/boost/boost-thread/: CONTROL
libs/win64/boost/boost-thread/debug/lib/: boost_thread-vc140-mt-gd.lib
libs/win64/boost/boost-thread/lib/: boost_thread-vc140-mt.lib
libs/win64/boost/boost-thread/share/boost-thread/: vcpkg_abi_info.txt
libs/win64/boost/boost-throw-exception/: CONTROL
libs/win64/boost/boost-throw-exception/share/boost-throw-exception/: vcpkg_abi_info.txt
libs/win64/boost/boost-type-traits/: CONTROL
libs/win64/boost/boost-type-traits/share/boost-type-traits/: vcpkg_abi_info.txt
libs/win64/boost/boost-utility/: CONTROL
libs/win64/boost/boost-utility/share/boost-utility/: vcpkg_abi_info.txt
libs/win64/bzip2/: CONTROL
libs/win64/bzip2/lib/: bz2.lib
libs/win64/bzip2/share/bzip2/: vcpkg_abi_info.txt
libs/win64/clsocket/: README.md.txt
libs/win64/clsocket/include/: CPacket.h
libs/win64/clsocket/lib/: clsocket_d.lib  clsocket_r.lib
libs/win64/cwipc/lib/: cwipc_codec.lib  cwipc_util.lib
libs/win64/ddk/include/ddkFramework/: ddk_fixed_size_allocator.h  ddk_global_allocators.inl
libs/win64/ddk/include_old/ddkFramework/: ddk_reference_counter.h
libs/win64/ddk/lib/ddkUtils/: ddkUtils_r.lib
libs/win64/ddk/lib_old/ddkUtils/: ddkUtils_r.lib
libs/win64/eigen/: CONTROL
libs/win64/eigen/lib/pkgconfig/: eigen3.pc
libs/win64/eigen/share/eigen3/: Eigen3Targets.cmake  vcpkg_abi_info.txt
libs/win64/libjpeg-turbo/: CONTROL
libs/win64/libjpeg-turbo/lib/: jpeg.lib  turbojpeg.lib
libs/win64/libjpeg-turbo/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
libs/win64/libjpeg-turbo/share/libjpeg-turbo/: vcpkg_abi_info.txt
libs/win64/liblzma/: CONTROL
libs/win64/liblzma/lib/: lzma.lib
libs/win64/liblzma/share/liblzma/: vcpkg_abi_info.txt
libs/win64/libpng/: CONTROL
libs/win64/libpng/debug/lib/: libpng16d.lib
libs/win64/libpng/debug/lib/pkgconfig/: libpng.pc
libs/win64/libpng/share/libpng/: vcpkg_abi_info.txt
libs/win64/pcl/: CONTROL
libs/win64/pcl/include/pcl/: pcl_config.h  point_cloud.h
libs/win64/pcl/include/pcl/segmentation/: supervoxel_clustering.h
libs/win64/pcl/lib/: pcl_common_release.lib  pcl_io_ply_release.lib  pcl_io_release.lib  pcl_kdtree_release.lib  pcl_keypoints_release.lib  pcl_ml_release.lib  pcl_recognition_release.lib  pcl_registration_release.lib  pcl_sample_consensus_release.lib  pcl_search_release.lib  pcl_stereo_release.lib
libs/win64/pcl/lib/pkgconfig/: pcl_2d-1.9.pc  pcl_common-1.9.pc  pcl_features-1.9.pc  pcl_filters-1.9.pc  pcl_geometry-1.9.pc  pcl_io-1.9.pc  pcl_kdtree-1.9.pc  pcl_keypoints-1.9.pc  pcl_ml-1.9.pc  pcl_octree-1.9.pc  pcl_recognition-1.9.pc  pcl_registration-1.9.pc  pcl_sample_consensus-1.9.pc  pcl_search-1.9.pc  pcl_segmentation-1.9.pc  pcl_stereo-1.9.pc  pcl_surface-1.9.pc  pcl_tracking-1.9.pc
libs/win64/pcl/share/pcl/: PCLConfig.cmake  vcpkg_abi_info.txt
libs/win64/sub/include/: signals_unity_bridge.h
libs/win64/sub/lib/: signals-unity-bridge.lib
libs/win64/zlib/: CONTROL
libs/win64/zlib/lib/: zlib.lib
libs/win64/zlib/share/zlib/: vcpkg_abi_info.txt
libs/win64/zstd/: CONTROL
libs/win64/zstd/lib/: zstd.lib
libs/win64/zstd/share/zstd/: vcpkg_abi_info.txt  zstd-config.cmake
src/: dependencies.cmake
src/XR-MCU/: AcquisitionModuleProfiler.cpp  AcquisitionModuleProfiler.h  B2DFrameWriter.cpp  B2DFrameWriter.h  BasicExceptions.h  CMakeLists.txt  CompilerFlags.cmake  ConfigExceptions.cpp  ConfigExceptions.h  CpuResource.h  CpuResourceVisitor.cpp  CpuResourceVisitor.h  CwipcDecodedFrame.cpp  CwipcDecodedFrame.h  CwipcEncodedFrame.cpp  CwipcEncodedFrame.h  CwipcFrameDecoder.cpp  CwipcFrameDecoder.h  CwipcFrameEncoder.cpp  CwipcFrameEncoder.h  CwipcFusionedFrame.cpp  CwipcFusionedFrame.h  DecodedFrame.cpp  DecodedFrame.h  DecodedFrameCreateVisitor.cpp  DecodedFrameCreateVisitor.h  DecodedFrameTransformVisitor.cpp  DecodedFrameTransformVisitor.h  DecodedFrameVisitor.h  DurationMeasurable.h  DurationMeasurable.inl  EncodedFrame.cpp  EncodedFrame.h  FrameDecoderBank.cpp  FrameDecoderBank.h  FrameDecoderBase.cpp  FrameDecoderBase.h  FrameDecoderDefs.cpp  FrameDecoderDefs.h  FrameDefs.cpp  (+140 more)
src/XR-MCU/API/: B2D.cpp  B2D.h  SUB.cpp  SUB.h
(+1 files in other folders)
